apps/openvscode-server/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: openvscode-server
  labels:
    app: openvscode-server
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: openvscode-server
  selector:
    app: openvscode-server
